# traceback_stats

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
envs/: web.env.example
traceback_stats/: config.conf.example  manage.py
traceback_stats/stats/: admin.py  apps.py  models.py
traceback_stats/stats/locale/ru/LC_MESSAGES/: django.mo  django.po
traceback_stats/stats/migrations/: 0001_initial.py
traceback_stats/traceback_stats/: asgi.py  settings.py  urls.py  wsgi.py
