[tool.poetry]
name = "traceback-stats"
version = "0.1.0"
description = ""
authors = ["alex <qwertin2505@gmail.com>"]
readme = "README.md"
packages = [{include = "traceback_stats"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
configparser = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
